@@ -1,21 +1,14 @@
-FROM maven:3.8.6-jdk-11 AS builder
-
-COPY ./src/ /root/src
-COPY ./pom.xml /root/
-COPY ./checkstyle.xml /root/
-WORKDIR /root
+#buildkit is activated by default on host docker
+FROM maven:3.8.6-openjdk-11-slim AS builder
+#WORKDIR /opt/automotive-bootcamp/
+WORKDIR /opt/tictactoe/
+COPY pom.xml pom.xml
+RUN mvn -e -B dependency:resolve
+COPY src/ src/
 RUN mvn clean package -DskipTests
-RUN java -Djarmode=layertools -jar /root/target/ds-2020-0.0.1-SNAPSHOT.jar list
-RUN java -Djarmode=layertools -jar /root/target/ds-2020-0.0.1-SNAPSHOT.jar extract
-RUN ls -l /root
 
-FROM openjdk:11.0.6-jre
-
-
-COPY --from=builder /root/dependencies/ ./
-COPY --from=builder /root/snapshot-dependencies/ ./
-
-RUN sleep 10
-COPY --from=builder /root/spring-boot-loader/ ./
-COPY --from=builder /root/application/ ./
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher","-XX:+UseContainerSupport -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Xms512m -Xmx512m -XX:+UseG1GC -XX:+UseSerialGC -Xss512k -XX:MaxRAM=72m"]
+FROM openjdk:11-jdk-slim
+WORKDIR /opt/tictactoe/
+COPY --from=builder /opt/tictactoe/target/*.jar tictatoe.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "tictatoe.jar"]
